RESOLVED FIXED236164
[libpas] allocation failure crash should be PAS_NEVER_INLINE
https://bugs.webkit.org/show_bug.cgi?id=236164
Summary [libpas] allocation failure crash should be PAS_NEVER_INLINE
Yusuke Suzuki
Reported 2022-02-04 15:55:12 PST
[libpas] allocation failure crash should be NEVER_INLINED
Attachments
Patch (1.67 KB, patch)
2022-02-04 15:56 PST, Yusuke Suzuki
ews-feeder: commit-queue-
Patch (3.14 KB, patch)
2022-02-04 16:17 PST, Yusuke Suzuki
saam: review+
Yusuke Suzuki
Comment 1 2022-02-04 15:56:23 PST
Yusuke Suzuki
Comment 2 2022-02-04 15:57:18 PST
Comment on attachment 450946 [details] Patch Oops, I'll a bit fix it.
Yusuke Suzuki
Comment 3 2022-02-04 16:17:24 PST
Saam Barati
Comment 4 2022-02-04 16:19:59 PST
Comment on attachment 450947 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=450947&action=review > Source/bmalloc/libpas/src/libpas/pas_utils.c:60 > + pas_panic("allocation did fail because of out-of-memory\n"); do we want to make sure this call gets inlined?
Yusuke Suzuki
Comment 5 2022-02-04 16:21:53 PST
Comment on attachment 450947 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=450947&action=review >> Source/bmalloc/libpas/src/libpas/pas_utils.c:60 >> + pas_panic("allocation did fail because of out-of-memory\n"); > > do we want to make sure this call gets inlined? Discussed with Saam. I'll change it to __builtin_trap to make pas_panic_on_out_of_memory_error top signature.
Yusuke Suzuki
Comment 6 2022-02-04 16:50:17 PST
OK we ensured it is built, landing.
Yusuke Suzuki
Comment 7 2022-02-04 16:51:59 PST
Radar WebKit Bug Importer
Comment 8 2022-02-04 16:52:16 PST
Note You need to log in before you can comment on or make changes to this bug.